--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Linking Bootstrap  -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Firebase Reference -->
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
   <!-- Linking CSS -->
 	<link rel="stylesheet" type="text/css" href="assets\css\reset.css">
 	<link rel="stylesheet" type="text/css" href="assets\css\style.css">
@@ -14,12 +16,62 @@
   <header>
     
   </header>
-
+<h2 class="text-center">Pick Your Team</h2>
+<div class="text-center">
+<div class="btn-group " role="group" aria-label="Button group with nested dropdown">
  
+
+   <div class="btn-group " role="group">
+    <button id="btnGroupDrop1" type="button" class="btn-lg btn-primary dropdown-toggle btn-width" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      NFL
+    </button>
+    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+      <a class="dropdown-item" href="#">NY Giants</a>
+      <a class="dropdown-item" href="#">Dallas cowboys</a>
+      <a class="dropdown-item" href="#">Pittsburh Steelers</a>
+
+    </div>
+  </div>
+
+   <div class="btn-group" role="group">
+    <button id="btnGroupDrop1" type="button" class="btn-lg btn-danger dropdown-toggle btn-width" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+     MLB
+    </button>
+    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+      <a class="dropdown-item" href="#">Boston Red sOX</a>
+      <a class="dropdown-item" href="#">wASHINGTON NATIONALS</a>
+    </div>
+  </div>
+
+  <div class="btn-group" role="group">
+    <button id="btnGroupDrop1" type="button" class="btn-lg btn-success dropdown-toggle btn-width" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      MLS
+    </button>
+    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+      <a class="dropdown-item" href="#">Dropdown link</a>
+      <a class="dropdown-item" href="#">Dropdown link</a>
+    </div>
+  </div>
+</div>
+</div>
+
+ <form id="player-form">
+    <!-- Button triggers new player to be added -->
+       <input type="text" class="center-block text"  id="player-input"><br />
+       <input id="add-player" class="button btn-lg center-block" type="submit" value="Add your favorite Nats Player">
+    </form>
   <!-- JQuery -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
  
  <!-- Javascript Game Logic -->
- <script type="text/javascript" src="assets/js/XXXXXXX.js"></script>
+ <script type="text/javascript" src="assets/js/project1.js"></script>
+
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+
+ <!-- Javascript Game Logic -->
+ <script type="text/javascript" src="assets/js/project1.js"></script>
+
 </body>
+ 
 </html>
+
