AJAX Calls completed

--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
     <button id="btnGroupDrop1" type="button" class="btn-lg btn-primary dropdown-toggle btn-width" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       NFL
     </button>
-    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-      <a class="dropdown-item" href="#">NY Giants</a>
-      <a class="dropdown-item" href="#">Dallas cowboys</a>
-      <a class="dropdown-item" href="#">Pittsburh Steelers</a>
+
+    <div id="football" class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+      
 
     </div>
   </div>
@@ -37,19 +36,17 @@
     <button id="btnGroupDrop1" type="button" class="btn-lg btn-danger dropdown-toggle btn-width" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
      MLB
     </button>
-    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-      <a class="dropdown-item" href="#">Boston Red sOX</a>
-      <a class="dropdown-item" href="#">wASHINGTON NATIONALS</a>
+
+    <div id="baseball" class="dropdown-menu" aria-labelledby="btnGroupDrop1">
     </div>
   </div>
 
   <div class="btn-group" role="group">
     <button id="btnGroupDrop1" type="button" class="btn-lg btn-success dropdown-toggle btn-width" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      MLS
+      WNBA
     </button>
-    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-      <a class="dropdown-item" href="#">Dropdown link</a>
-      <a class="dropdown-item" href="#">Dropdown link</a>
+    <div id="basketball" class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+     
     </div>
   </div>
 </div>
@@ -63,9 +60,6 @@
   <!-- JQuery -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
  
- <!-- Javascript Game Logic -->
- <script type="text/javascript" src="assets/js/project1.js"></script>
-
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
 
  <!-- Javascript Game Logic -->
