--- a/modalTest01.html
+++ b/modalTest01.html
@@ -2,33 +2,48 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Linking Bootstrap  -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+   <style>
+     #modalBtn{
+      display: none;
+     }
+   </style>
+
   <!-- Linking CSS -->
-	<link rel="stylesheet" type="text/css" href="assets\css\reset.css">
-	<link rel="stylesheet" type="text/css" href="assets\css\style.css">
+  <link rel="stylesheet" type="text/css" href="assets\css\reset.css">
+  <link rel="stylesheet" type="text/css" href="assets\css\style.css">
+  
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  
+
+
+
 </head>
-<html>
+
 <body>
   <header>
     
   </header>
  
+  <div id="para1">Para1 here</div>
+  <br/>  
   <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal_1">Open Small Modal</button>
+  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal_1" id="modalBtn">Open Small Modal</button>
 
   <!-- Modal -->
     <div class="modal fade" id="myModal_1" role="dialog">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
           <div class="modal-header">
-             Athina here...
+             Date Validation
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Modal Header</h4>
+            <h4 class="modal-title">Date Error</h4>
           </div>
           <div class="modal-body">
-            <p>This is a small modal.</p>
+            <p>Error: Start Date greater than End Date.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close Me</button>
@@ -37,13 +52,27 @@
       </div>
     </div>
 
+    <!-- Norman's Form -->
+    <p>
+    <div>
+      Start date (mm/dd/yy): <input type="text" id="startdate">
+    </div>
+    <div>
+      End date (mm/dd/yy): <input type="text" id="enddate">
+    </div>
 
-
+    <button type="button" id="btnNormanFormSubmit">Submit Form (Calendar)</button>
+    </p>
  
-  <!-- JQuery -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ 
  <!-- Javascript Game Logic -->
+ <!--
  <script type="text/javascript" src="assets/js/XXXXXXX.js"></script>
+ -->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ <script src="myApp.js"></script>
+
 </body>
 </html>
