--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header>
     
   </header>
-      <h1 class="container text-center">Pick Your Team</h1>
+      <h1 class="container text-center">Gametime - Pick Your Team</h1>
 
       <!-- buttons for sport choice -->
 
